# GeoMoss-WebGIS

./: .gitignore  AGENTS.md  CHANGELOG.md  LocalDev.bat  NOTICE.md  README.md
.github/workflows/: codeql.yml  deploy.yml
Docs/: Example_prompt.md  Force_command.md
Docs/26-04-19/: 2026-04-19-AgentChat全局同步与动态配额修复.md  2026-04-19-AgentChat配置同步修复.md  2026-04-19-AgentChat零配置即刻响应.md  2026-04-19-版本规范执行记录.md  2026-04-19-项目完成总结报告.md
Docs/26-04-20/: 2026-04-20-loading-logic-fix.md  2026-04-20-sequential-load-fix.md  2026-04-20-url-sync-refactor.md  2026-04-20-ux-relay-and-proxy-fix.md
Docs/26-04-22/: 2026-04-22-native-canvas-rendering.md
Docs/26-04-27/: 2026-04-27-districts-ui.md  2026-04-27-native-canvas-rendering.md  2026-04-27-wind2d-cesium-integration.md
Docs/26-04-28/: 2026-04-28-toc-district-unification.md
backend/: .env.example  Dockerfile  README.md  app.py  pyproject.toml
backend/api/: __init__.py  admin.py  admin_geodata.py  agent_chat.py  api_keys_management.py  api_management.py  auth.py  database.py  email_auth.py  external_proxy.py  fengshui.py  location.py  proxy.py  routes.py  shp_to_3dtiles.py  statistics.py  system.py  terrain.py  threed.py
backend/core/: __init__.py  cors.py  lifecycle.py
backend/scripts/: import_server_3d_layer.py
backend/services/fengshui/: __init__.py  ai_insights.py  geometry.py  imagery_capture.py  location_context.py  report.py  scoring.py  terrain.py  visual_water.py  water.py
frontend/: .env.example  README.md  eslint.config.js  index.html  jsconfig.json  package-lock.json  package.json  stats.html  vite.config.js
(+230 files in other folders)
