[project]
name = "webgis-backend"
version = "0.1.0"
description = "WebGIS 后端服务（FastAPI + Pandas）"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "fastapi>=0.100.0",
    "uvicorn[standard]>=0.23.0",
    "httpx>=0.24.0",
    "pandas>=2.0.0",
    "psycopg2-binary>=2.9.0",
    "pytz",
    "python-multipart>=0.0.6",
]

[tool.uv]
managed = true
